--- a/html/multimedia-and-embedding/mdn-splash-page-start/index.html
+++ b/html/multimedia-and-embedding/mdn-splash-page-start/index.html
@@ -99,14 +99,14 @@
   <body>
     <header>
       <h1>Mozilla</h1>
-      <!-- insert <img> element, link to the small
-          version of the Firefox logo -->
+      <img src="images/firefoxlogo120.png">
 
     </header>
 
     <main>
       <article>
-        <!-- insert iframe from youtube -->
+          <iframe width="400" height="315" src="https://www.youtube.com/embed/ojcNcvb1olg" 
+          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <h2>Rocking the free web</h2>
 
@@ -116,24 +116,42 @@
       </article>
 
       <div class="further-info">
-        <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img>
+          <img srcset="images/firefoxlogo400.png 400w,
+                      images/firefoxlogo120.png 120w"
+                      sizes="(max-width: 480px) 120px,
+                      400px"
+                      src="images/firefoxlogo400.png"
+                      alt="standard mozilla logo">
         </a>
         <a href="https://www.mozilla.org/">
-          <img>
+          <img srcset="images/mozilla-dinosaur-head400.png 400w,
+                      images/mozilla-dinosaur-head120.png 120w"
+                      sizes="(max-width: 480px) 120px,
+                      400px"
+                      src="images/mozilla-dinosaur-head400.png"
+                      alt="mozilla dino">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img>
+          <img srcset="images/firefox-addons400.jpg 400w,
+                      images/firefox-addons120.jpg 120w"
+                      sizes="(max-width: 480px) 120px,
+                      400px"
+                      src="images/firefox-addons400.jpg"
+                      alt="mozilla addons logo">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img>
+          <img src="images/firefoxlogo120.png" alt="mdn logo" srcset="images/mdn.svg">
         </a>
         <div class="clearfix"></div>
       </div>
 
       <div class="red-panda">
-        <!-- insert picture element -->
+        <picture>
+          <source media="(max-width: 600px)" srcset="images/red-panda600.jpg">
+          <img src="images/red-panda1200.jpg" alt="panda-img">
+        </picture>
+
       </div>
 
     </main>
